      \item An errorneous cast to \code{int} affecting large return object
      has been removed (Dirk in \ghpr{1335} fixing \ghpr{1334})
      \item Compilation on DragonFlyBSD is now supported (Gábor Csárdi in
      \ghpr{1338})
      \item Use read-only \code{VECTOR_PTR} and \code{STRING_PTR} only with
      with R 4.5.0 or later (Kevin in \ghpr{1342} fixing \ghit{1341})
    }
    \item Changes in Rcpp Attributes:
    \itemize{
      \item The \code{sourceCpp()} function can now handle input files with
      read-only modes (Simon Guest in \ghpr{1346} fixing \ghit{1345})
    }
    \item Changes in Rcpp Deployment:
    \itemize{
      \item One unit tests for arm64 macOS has been adjusted; a macOS
      continuous integration runner was added (Dirk in \ghpr{1324})
      \item Authors@R is now used in DESCRIPTION as mandated by CRAN, the
      \code{Rcpp.package.skeleton()} function also creates it (Dirk in
      \ghpr{1325} and \ghpr{1327})
      \item A single datetime format test has been adjusted to match a change
      in R-devel (Dirk in \ghpr{1348} fixing \ghit{1347})
    }
    \item Changes in Rcpp Documentation:
    \itemize{
      \item The Rcpp Modules vignette was extended slightly following
      \ghit{1322} (Dirk)
      \item Pdf vignettes have been regenerated under Ghostscript 10.03.1 to
      avoid a false positive by a Windows virus scanner (Iñaki in
      \ghpr{1331})
      \item A (large) number of (old) typos have been corrected in the
      vignettes (Marco Colombo in \ghpr{1344})
    }
  }
}

\section{Changes in Rcpp 'hot-fix' release version 1.0.13-1 (2024-11-01)}{
  \itemize{
    \item Changes in Rcpp API:
    \itemize{
      \item Use read-only \code{VECTOR_PTR} and \code{STRING_PTR} only with
      with R 4.5.0 or later (Kevin in \ghpr{1342} fixing \ghit{1341})
    }
    \item Changes in Rcpp Deployment:
    \itemize{
      \item Authors@R is now used in DESCRIPTION as mandated by CRAN
    }
  }
}
